# rakki

./: .gitignore  CMakeLists.txt  README.md  com.georgefb.rakki.yml
_flatpak/: build_and_install.sh  com.georgefb.rakki.yml
data/: CMakeLists.txt  com.georgefb.rakki.desktop  com.georgefb.rakki.metainfo.xml  sc-apps-rakki.svg.license
src/: CMakeLists.txt  backend.cpp  backend.h  extractor.cpp  extractor.h  main.cpp  mangaimageprovider.cpp  mangaimageprovider.h  mangaimagesmodel.cpp  mangaimagesmodel.h  mangaloader.cpp  mangaloader.h
src/qml/: main.qml
